# NBA-Scoring-Streamlit-App

./: NBA_grad_model.pkl  README.md  nba_streamlit.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
